--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 <!-- /Google Analytics -->
 
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise easy website maker</a></section>
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise easy website maker
+</a></section>
 <section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header1-1" style="background-image: url(assets/images/gecomp-1600x1067-79.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
@@ -45,7 +46,7 @@
                         <h1 class="mbr-hero__text">Merel Van de Casteele</h1>
                         <p class="mbr-hero__subtext">Student aan LUCA, School of Arts.<br></p>
                     </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-primary" href="page1.html">RECENT WERK</a> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-primary" href="page6.html">&nbsp; &nbsp;ARCHIEF &nbsp;&nbsp;</a>  <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-primary" href="http://merelvandecasteele.github.io/PublicatieENG/" target="_blank">&nbsp; &nbsp;English &nbsp;&nbsp;</a> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-primary" href="page4.html">&nbsp; &nbsp;Contact &nbsp;&nbsp;</a> </div>
+                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-primary" href="page1.html">RECENT WERK</a> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-primary" href="page6.html">&nbsp; &nbsp;ARCHIEF &nbsp;&nbsp;</a>  <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-primary" href="http://merelvandecasteele.github.io/PubEn/" target="_blank">&nbsp; &nbsp;English &nbsp;&nbsp;</a> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-primary" href="page4.html">&nbsp; &nbsp;Contact &nbsp;&nbsp;</a> </div>
                 </div></div>
             </div></div>
         </div>
