--- a/page6.html
+++ b/page6.html
@@ -33,7 +33,8 @@
 <!-- /Google Analytics -->
 
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise best free website creator</a></section>
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise best free website creator
+</a></section>
 <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--auto-collapse" id="menu-53">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
@@ -42,7 +43,7 @@
                 <div class="mbr-navbar__hamburger mbr-hamburger text-white"><span class="mbr-hamburger__line"></span></div>
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
-                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="index.html">HOME</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="page1.html">RECENT WERK</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="page6.html">ARCHIEF</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="page4.html">CONTACT</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="http://merelvandecasteele.github.io/PublicatieENG/" target="_blank">ENGLISH</a></li></ul></div>
+                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="index.html">HOME</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="page1.html">RECENT WERK</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="page6.html">ARCHIEF</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="page4.html">CONTACT</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="http://merelvandecasteele.github.io/PubEn/" target="_blank">ENGLISH</a></li></ul></div>
                         <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-inverse mbr-buttons--active"><li class="mbr-navbar__item"><a class="mbr-buttons__btn btn btn-link" href="https://mobirise.com"></a></li></ul></div>
                     </nav>
                 </div>
